--- a/ShoppingApplication/shopping.css
+++ b/ShoppingApplication/shopping.css
@@ -13,15 +13,15 @@ h6{
 /*------------------------*/
 /* Fixed Logo Styling */
 /*------------------------*/
-.fixed-logo {
-    position: fixed; /* Fixiert es an einer festen Position */
-    bottom: 20px; /* Abstand zum unteren Rand */
-    left: 50%; /* Zentriert es horizontal */
-    transform: translateX(-50%); /* Exakte Zentrierung */
-    width: 150px; /* Standardgröße */
-    max-width: 80%; /* Skalierung, um Überlauf zu verhindern */
-    z-index: 1000; /* Hält es über allen anderen Elementen */
-}
+/*.fixed-logo {*/
+/*    position: fixed; */
+/*    bottom: 20px; !* Abstand zum unteren Rand *!*/
+/*    left: 50%; !* Zentriert es horizontal *!*/
+/*    transform: translateX(-50%); !* Exakte Zentrierung *!*/
+/*    width: 150px; !* Standardgröße *!*/
+/*    max-width: 80%; !* Skalierung, um Überlauf zu verhindern *!*/
+/*    z-index: 1000; !* Hält es über allen anderen Elementen *!*/
+/*}*/
 
 /*------------------------*/
 /*Responsive Anpassungen - Mobil First*/
